<resources>
    <string name="app_name">Assignment 3</string>
    <!-- Button Labels -->
    <string name="assignment_1">Assignment 1</string>
    <string name="assignment_2">Assignment 2</string>
    <string name="assignment_3">Assignment 3</string>
    <string name="assignment_4">Assignment 4</string>
    <string name="assignment_5">Assignment 5</string>
    <string name="assignment_6">Assignment 6</string>
    <string name="assignment_7">Assignment 7</string>
    <string name="assignment_8">Assignment 8</string>
    <string name="assignment_9">Assignment 9</string>
    <string name="assignment_10">Assignment 10</string>

    <string-array name="countries_array">
        <item>USA</item>
        <item>Canada</item>
        <item>UK</item>
        <item>Australia</item>
        <item>India</item>
    </string-array>
</resources>

