<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:paddingBottom="25dp"
            android:text="Welcome! to All Assignments"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />

        <!-- Button 1 -->
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/assignment_1" />

        <!-- Button 2 -->
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/assignment_2" />

        <!-- Button 3 -->
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/assignment_3" />

        <!-- Button 4 -->
        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/assignment_4" />

        <!-- Button 5 -->
        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/assignment_5" />

        <!-- Button 6 -->
        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/assignment_6" />

        <!-- Button 7 -->
        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/assignment_7" />

        <!-- Button 8 -->
        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/assignment_8" />

        <!-- Button 9 -->
        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/assignment_9" />

        <!-- Button 10 -->
        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/assignment_10" />

    </LinearLayout>

</ScrollView>